# otus-hla-hw

./: CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  balancing_report.docx  cfg.yaml  docker-compose.yaml  haproxy.cfg  nginx.conf  queries.yaml  sqlx-data.json
monitoring/: prom.yaml
pg_1_data/: postgresql.conf
postgres/: docker-compose.yaml  migrator-init.sh  migrator.Dockerfile  servers.json
postgres/cluster/: Dockerfile  cfg.yaml  docker-compose.yaml  enrich_and_import.py  report_replication.docx  report_replication.odt
postgres/cluster/pg_1_data/: postgresql.conf
postgres/schema/ddl/0000_schema/: apply.sql  rollback.sql
postgres/schema/ddl/0001_users/: apply.sql  rollback.sql
postgres/schema/ddl/0002_messages/: apply.sql  rollback.sql
postgres/sharding/: Dockerfile  README.md  cfg.yaml  docker-compose.yaml  migrator-init.sh  migrator-sh-init.sh  migrator.Dockerfile
research/: HTTP Request Defaults.jmx  enrich_and_import.py  script.js  summary.html
research/graph_results/: .~lock.results_after_1000_1.png#  report_loadtesting_index.docx
src/: cli.rs  config.rs  db.rs  error.rs  main.rs  models.rs  state.rs  web.rs
src/web/: dialog.rs  mod.rs  user.rs
tests/: postman_collection.json  spec.yml
