[package]
name = "otus-hla-hw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
async-trait = "0.1.53"
axum = "0.6.20"
axum-macros = "0.3.8"
chrono = {version="0.4", features=["serde", "rustc-serialize"]}
config = { version = "0.13", features = ["yaml"] }
futures = { version = "0.3" }
serde = { version = "1.0", features = ["derive"] }
sha256 = "1.4.0"
sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "postgres", "macros", "json", "chrono", "offline", "decimal"] }
slog = "2.7"
slog-scope = "4.4.0"
slog-term = "2.9.0"
structopt = "0.3"
tokio = { version = "1.17.0", features = ["full"] }
tokio-util = "0.7.3"
thiserror = "1.0.50"

[dependencies.uuid]
version = "1.5.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]